# projekt7

./: CMakeLists.txt  COPYRIGHT  README  build_deb  main.cpp  make  player.cpp  player.h  projekt7.desktop  projekt7ui.rc  render_icons
debian/: changelog  control  copyright  rules
